fixed bug where screen gif is selected upon appearance positioned gif behind p5js stuff

--- a/style.css
+++ b/style.css
@@ -3,3 +3,8 @@ body {
   margin: 0;
   overflow: hidden;
 }
+
+img {
+  z-index: -1;
+  user-select: none;
+}
